# z-audio-dsp-plugin

./: .gitignore  .gitmodules  Cargo.toml  README.md  bundler.toml  launch-wclap-host.bat
apps/z-audio-wclap-host/: README.md  index.html  launch.bat  main.js  page-proxy-service-worker.js  server.py  styles.css
apps/z-audio-wclap-host/clap-audionode/: clap-audionode.mjs  host-imports.mjs  (+1 more)
assets/sampler/: piano-dev.bank
assets/vcsl-piano/: grand-piano-k-dev.bank
crates/nih-plug-webview/: Cargo.toml  NOTICE.md
crates/nih-plug-webview/src/: lib.rs
crates/wclap-plugin/: NOTICE.md
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs  sampler_bank.rs  vcsl_piano.rs
crates/z-audio-compressor-plugin/: Cargo.toml
crates/z-audio-compressor-plugin/src/: editor.rs  lib.rs
crates/z-audio-diffuser-plugin/: Cargo.toml
crates/z-audio-drums-plugin/: Cargo.toml
crates/z-audio-drums-plugin/src/: lib.rs
crates/z-audio-eq-plugin/: Cargo.toml
crates/z-audio-granular-plugin/: Cargo.toml
crates/z-audio-granular-plugin/src/: editor.rs  lib.rs  shared.rs
crates/z-audio-limiter-plugin/: Cargo.toml
crates/z-audio-piano-plugin/: Cargo.toml
crates/z-audio-plugin/: Cargo.toml
crates/z-audio-plugin/src/: editor.rs  engine.rs  enums.rs  lib.rs  params.rs
crates/z-audio-reverb-plugin/: Cargo.toml
crates/z-audio-sampler-plugin/: Cargo.toml
crates/z-audio-sampler-plugin/src/: decode.rs  editor.rs  lib.rs  shared.rs  state.rs
crates/z-audio-vcsl-piano-plugin/: Cargo.toml
crates/z-audio-webclap/: Cargo.toml  plugin.json
crates/z-audio-webclap-bitcrusher/: Cargo.toml  plugin.json
crates/z-audio-webclap-bitcrusher/src/: lib.rs
crates/z-audio-webclap-bitcrusher/ui/: index.html  main.js
crates/z-audio-webclap-chorus/: Cargo.toml  plugin.json
crates/z-audio-webclap-chorus/src/: lib.rs
crates/z-audio-webclap-chorus/ui/: index.html  main.js
crates/z-audio-webclap-compressor/: Cargo.toml  plugin.json
crates/z-audio-webclap-compressor/src/: engine.rs  lib.rs  protocol.rs
crates/z-audio-webclap-compressor/ui/: index.html  main.js  styles.css
crates/z-audio-webclap-delay/: Cargo.toml  build.rs  plugin.json
crates/z-audio-webclap-delay/src/: lib.rs
crates/z-audio-webclap-delay/ui/: index.html  main.js
crates/z-audio-webclap-diffuser/: Cargo.toml  build.rs  plugin.json
crates/z-audio-webclap-diffuser/src/: lib.rs
crates/z-audio-webclap-diffuser/ui/: index.html  main.js  styles.css  zui.js
crates/z-audio-webclap-distortion/: Cargo.toml  plugin.json
crates/z-audio-webclap-distortion/src/: lib.rs
crates/z-audio-webclap-distortion/ui/: index.html  main.js
crates/z-audio-webclap-drums/: Cargo.toml  plugin.json
crates/z-audio-webclap-drums/src/: lib.rs
crates/z-audio-webclap-eq/: Cargo.toml  plugin.json
crates/z-audio-webclap-eq/src/: engine.rs  lib.rs  params.rs
crates/z-audio-webclap-eq/ui/: index.html  main.js  styles.css
crates/z-audio-webclap-flanger/: Cargo.toml  plugin.json
crates/z-audio-webclap-flanger/src/: lib.rs
crates/z-audio-webclap-flanger/ui/: index.html  main.js
crates/z-audio-webclap-gate/: Cargo.toml  plugin.json
crates/z-audio-webclap-gate/src/: lib.rs
crates/z-audio-webclap-gate/ui/: index.html  main.js
crates/z-audio-webclap-granular/: Cargo.toml  plugin.json
crates/z-audio-webclap-granular/src/: engine.rs  lib.rs  params.rs  protocol.rs
crates/z-audio-webclap-granular/ui/: index.html  main.js  styles.css
crates/z-audio-webclap-hyperdim/: Cargo.toml  plugin.json
crates/z-audio-webclap-hyperdim/src/: lib.rs
crates/z-audio-webclap-hyperdim/ui/: index.html  main.js
crates/z-audio-webclap-limiter/: Cargo.toml  plugin.json
crates/z-audio-webclap-limiter/src/: lib.rs
crates/z-audio-webclap-limiter/ui/: index.html  main.js  styles.css
crates/z-audio-webclap-ott/: Cargo.toml  plugin.json
crates/z-audio-webclap-ott/src/: lib.rs
crates/z-audio-webclap-ott/ui/: index.html  main.js
crates/z-audio-webclap-phaser/: Cargo.toml  plugin.json
crates/z-audio-webclap-phaser/src/: lib.rs
crates/z-audio-webclap-phaser/ui/: index.html  main.js
crates/z-audio-webclap-piano/: Cargo.toml  plugin.json
crates/z-audio-webclap-piano/src/: lib.rs
crates/z-audio-webclap-reverb/: Cargo.toml  plugin.json
crates/z-audio-webclap-reverb/src/: lib.rs
crates/z-audio-webclap-reverb/ui/: index.html  main.js  styles.css
crates/z-audio-webclap-ringmod/: Cargo.toml  plugin.json
crates/z-audio-webclap-ringmod/src/: lib.rs
crates/z-audio-webclap-ringmod/ui/: index.html  main.js  zui.js
crates/z-audio-webclap-sampler/: Cargo.toml  plugin.json
crates/z-audio-webclap-sampler/src/: engine.rs  lib.rs  protocol.rs
crates/z-audio-webclap-sampler/ui/: index.html  main.js  onsets.js  onsets.test.mjs  styles.css
crates/z-audio-webclap-saturator/: Cargo.toml  plugin.json
crates/z-audio-webclap-tremolo/: Cargo.toml  plugin.json
crates/z-audio-webclap-tremolo/src/: lib.rs
crates/z-audio-webclap-tremolo/ui/: index.html  main.js
crates/z-audio-webclap-vcsl-piano/: Cargo.toml  plugin.json
crates/z-audio-webclap-vcsl-piano/src/: lib.rs
crates/z-audio-webclap-vcsl-piano/ui/: index.html  main.js  styles.css
crates/z-audio-webclap-vocoder/: Cargo.toml  plugin.json
crates/z-audio-webclap-wavetable/: Cargo.toml  plugin.json
crates/z-audio-webclap-wavetable/src/: engine.rs  lib.rs  params.rs  protocol.rs  shape.rs  wavetable.rs
crates/z-audio-webclap-wavetable/ui/: index.html  main.js  presets.js  styles.css
crates/z-audio-webview-editor/: Cargo.toml
docs/: VCSLサンプラーピアノ実装計画.md  WebCLAPとGUI実装の調査報告.md  piano_current_implementation_for_review.md  サンプラー.md  楽器を数式で実装.md  汎用サンプラー実装計画.md  汎用サンプラー必要調査計画.md
docs/z-audio-dsp_plugin_plan/: 00_plugin_overview.md  01_wrapper_architecture.md  02_vst3_clap_nih_plug_plan.md  03_clap_native_plan.md  04_webclap_plan.md  05_parameters_automation_presets.md  06_build_ci_release.md  07_host_testing_matrix.md  08_milestones.md  09_risks_and_decisions.md  README.md  REFERENCES.md
docs/z_audio_dsp_implementation_plan/: IMPLEMENTATION_EXECUTION_PLAN.md  README.md
(+43 files in other folders)
