[workspace]
resolver = "2"
members = [
    "crates/z-audio-plugin",
    "crates/z-audio-eq-plugin",
    "crates/z-audio-piano-plugin",
    "crates/z-audio-vcsl-piano-plugin",
    "crates/z-audio-sampler-plugin",
    "crates/z-audio-granular-plugin",
    "crates/z-audio-drums-plugin",
    "crates/z-audio-reverb-plugin",
    "crates/z-audio-diffuser-plugin",
    "crates/z-audio-limiter-plugin",
    "crates/z-audio-compressor-plugin",
    "crates/z-audio-webclap",
    "crates/z-audio-webclap-eq",
    "crates/z-audio-webclap-piano",
    "crates/z-audio-webclap-vcsl-piano",
    "crates/z-audio-webclap-sampler",
    "crates/z-audio-webclap-granular",
    "crates/z-audio-webclap-wavetable",
    "crates/z-audio-webclap-drums",
    "crates/z-audio-webclap-reverb",
    "crates/z-audio-webclap-diffuser",
    "crates/z-audio-webclap-limiter",
    "crates/z-audio-webclap-compressor",
    "crates/z-audio-webclap-ringmod",
    "crates/z-audio-webclap-distortion",
    "crates/z-audio-webclap-saturator",
    "crates/z-audio-webclap-bitcrusher",
    "crates/z-audio-webclap-delay",
    "crates/z-audio-webclap-chorus",
    "crates/z-audio-webclap-flanger",
    "crates/z-audio-webclap-phaser",
    "crates/z-audio-webclap-tremolo",
    "crates/z-audio-webclap-gate",
    "crates/z-audio-webclap-hyperdim",
    "crates/z-audio-webclap-ott",
    "crates/wclap-plugin",
    "crates/nih-plug-webview",
    "crates/z-audio-webview-editor",
    "crates/xtask",
]
exclude = [
    "thirdparty/z-audio-dsp",
]

[profile.release]
lto = "thin"
strip = true
