[package]
name = "z-audio-plugin"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false

[lib]
name = "z_audio_plugin"
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "f36931f7af4646065488a9845d8f8c2f95252c23" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "f36931f7af4646065488a9845d8f8c2f95252c23" }
z-audio-dsp = { path = "../../thirdparty/z-audio-dsp/crates/z-audio-dsp" }
z-audio-synth = { path = "../../thirdparty/z-audio-dsp/crates/z-audio-synth" }

[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
z-audio-webview-editor = { path = "../z-audio-webview-editor" }
