[package]
name = "z-audio-webclap-compressor"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Z Audio Compressor packaged as a WCLAP plugin."

[lib]
crate-type = ["cdylib"]

[dependencies]
wclap-plugin = { path = "../wclap-plugin", default-features = false }
z-audio-dsp = { path = "../../thirdparty/z-audio-dsp/crates/z-audio-dsp" }
