[package]
name = "z-audio-webclap-delay"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Stereo delay with ping-pong and feedback damping, packaged as a WCLAP plugin."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wclap-plugin = { path = "../wclap-plugin", default-features = false }
