[package]
name = "z-audio-webclap-eq"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Pro-Q-style 8-band parametric EQ with band solo and spectrum analyzer, packaged as a real WCLAP plugin."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wclap-plugin = { path = "../wclap-plugin", default-features = false }
