[package]
name = "z-audio-webclap-flanger"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Stereo flanger with bipolar feedback, packaged as a WCLAP plugin."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wclap-plugin = { path = "../wclap-plugin", default-features = false }
