[package]
name = "z-audio-webclap-granular"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Phase Plant-style granular synthesizer (UI file load + seekable play position), packaged as a real WCLAP plugin."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wclap-plugin = { path = "../wclap-plugin", default-features = false }
z-audio-dsp = { path = "../../thirdparty/z-audio-dsp/crates/z-audio-dsp" }
