[package]
name = "z-audio-webclap-phaser"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Multi-stage stereo phaser, packaged as a WCLAP plugin."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wclap-plugin = { path = "../wclap-plugin", default-features = false }
