[package]
name = "z-audio-webclap-piano"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Z Audio Formula Piano packaged as a WCLAP plugin."

[lib]
crate-type = ["cdylib"]

[dependencies]
wclap-plugin = { path = "../wclap-plugin", default-features = false }
z-audio-dsp = { path = "../../thirdparty/z-audio-dsp/crates/z-audio-dsp" }
z-audio-synth = { path = "../../thirdparty/z-audio-dsp/crates/z-audio-synth" }
