[package]
name = "z-audio-webclap-reverb"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Z Audio Parametric Reverb packaged as a WCLAP plugin."

[lib]
crate-type = ["cdylib"]

[dependencies]
wclap-plugin = { path = "../wclap-plugin", default-features = false }
z-audio-dsp = { path = "../../thirdparty/z-audio-dsp/crates/z-audio-dsp" }
