[package]
name = "z-audio-webclap-sampler"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Multi-zone sampler instrument (UI file load + auto-slice), packaged as a real WCLAP plugin."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wclap-plugin = { path = "../wclap-plugin", default-features = false }
z-audio-dsp = { path = "../../thirdparty/z-audio-dsp/crates/z-audio-dsp" }
