[package]
name = "z-audio-webclap-tremolo"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Tremolo / auto-pan with stereo LFO phase, packaged as a WCLAP plugin."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wclap-plugin = { path = "../wclap-plugin", default-features = false }
