[package]
name = "z-audio-webclap-wavetable"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Serum-inspired wavetable synthesizer (2 wavetable oscillators, SVF filter, 2 envelopes, 2 LFOs, mod matrix), packaged as a real WCLAP plugin."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wclap-plugin = { path = "../wclap-plugin", default-features = false }
z-audio-dsp = { path = "../../thirdparty/z-audio-dsp/crates/z-audio-dsp" }
